tests/errors/first_stage/.string/expected_quotes/expected_quotes.as
; expected quotes to start string
myStr: .string a
; also happens here
myStr: .string b""